force-app/main/default/objects/PRO_Association__c/PRO_Association__c.object-meta.xml
<CustomObject>
    <label>PRO Association</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>PRO Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRO Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>