force-app/main/default/objects/PRO_Association__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TIRES_LIGHT_PASSENGER</fullName>
                <label>Passenger / Light Truck Tires</label>
            </value>
            <value>
                <fullName>TIRES_MEDIUM_TRUCK</fullName>
                <label>Medium Truck Tires</label>
            </value>
            <value>
                <fullName>TIRES_SMALL_OFFROAD</fullName>
                <label>Off-Road Tires (Except Large)</label>
            </value>
            <value>
                <fullName>TIRES_GIANT_OFFROAD</fullName>
                <label>Large Tires greater than 700 kg</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>