force-app/main/default/objects/PRO_Association__c/fields/PRO_Account__c.field-meta.xml
<CustomField>
    <fullName>PRO_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRO Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRO Associations</relationshipLabel>
    <relationshipName>PRO_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>