force-app/main/default/objects/PRO_Association__c/fields/PRO_Account_Active__c.field-meta.xml
<CustomField>
    <fullName>PRO_Account_Active__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRO Account (Active)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRO Associations (PRO Account (Active))</relationshipLabel>
    <relationshipName>PRO_Associations1</relationshipName>
    <type>Lookup</type>
</CustomField>