force-app/main/default/objects/PRO_Association__c/fields/PRO_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>PRO_Account_Name__c</fullName>
    <formula>PRO_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRO Account Name</label>
    <type>Text</type>
</CustomField>