force-app/main/default/objects/PRO_Association__c/fields/PRO_Account_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>PRO_Account_Primary_Contact_Email__c</fullName>
    <label>PRO Account Primary Contact Email</label>
    <type>Email</type>
</CustomField>