force-app/main/default/objects/PRO_Association__c/fields/Producer_Account__c.field-meta.xml
<CustomField>
    <fullName>Producer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRO Associations (Producer Account)</relationshipLabel>
    <relationshipName>PRO_Associations2</relationshipName>
    <type>Lookup</type>
</CustomField>