force-app/main/default/objects/PRO_Association__c/fields/Producer_Account_Active__c.field-meta.xml
<CustomField>
    <fullName>Producer_Account_Active__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer Account (Active)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRO Associations (Producer Account (Active))</relationshipLabel>
    <relationshipName>PRO_Associations3</relationshipName>
    <type>Lookup</type>
</CustomField>