force-app/main/default/objects/PRO_Association__c/fields/Producer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_Account_Name__c</fullName>
    <formula>Producer_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer Account Name</label>
    <type>Text</type>
</CustomField>